modal scrollbars issue #23

--- a/app/static/app/content/tripalocal.css
+++ b/app/static/app/content/tripalocal.css
@@ -124,7 +124,7 @@ th h3{margin: 2px}
 	max-height: 400px;
 	opacity:1;
 	z-index:1000;
-	overflow:scroll;
+	overflow:hidden;
 }
 .modal-inner{
 	float:none;
